.github/lean_quality/fixtures/research_legacy_refs/negative/indirect/Formal/AG/Bridge.lean
module
meta import all Formal.AG.Research.Basic
